--- a/styles/what-is-hpp.css
+++ b/styles/what-is-hpp.css
@@ -78,7 +78,7 @@
 
 	.hpp-dtc-m-hero.internal-hero .content .pre-title {
 		position: relative;
-		left: -9rem;
+		left: 0;
 	}
 
 	.hpp-dtc-m-hero.internal-hero.what-is-hpp-hero .hero-box {
@@ -566,7 +566,7 @@
 	left: 0;
 	bottom: 0;
 	z-index: -1;
-	height: 100px;
+	height: 110px;
 }
 
 .hpp-dtc-m-hero.internal-hero .content .hero-box {
@@ -591,7 +591,10 @@
 
 	.hpp-dtc-m-hero.what-is-hpp-hero .content {
 		/* margin-top: 30rem; */
-		margin-bottom: 4rem;
+		margin-bottom: 30px;
+		max-width: 1190px;
+		padding-right: 15px;
+		padding-left: 15px;
 	}
 
 	/* .hpp-dtc-m-hero.sign-up-hero .content {
@@ -649,7 +652,6 @@
 		margin-bottom: 3rem;
 	}
 
-	.hpp-dtc-life-with__content .title {}
 }
 
 @media (max-width: 1023px) {
@@ -682,7 +684,7 @@
 @media screen and (min-width: 992px) {
 	.hpp-dtc-m-hero.internal-hero .content .pre-title {
 		font-size: 2.8rem;
-		margin-top: 5rem;
+		margin-top: 30px;
 	}
 
 	.hpp-dtc-p-what-is-hpp .hpp-dtc-life-with .description::before {
